"""
structural_skeletons.py
========================
Python class stubs generated from the PlantUML architecture diagram
(architecture.puml).

These are STRUCTURAL STUBS only — method bodies contain `...` (Ellipsis).
The actual implementations live in the real module files:
  • core/contracts.py
  • core/engine.py
  • plugins/inputs.py
  • plugins/outputs.py
  • main.py

This file satisfies Deliverable D11:
"Structural Python code generation from the PlantUML code."
"""

from __future__ import annotations
from typing import Protocol, Any, runtime_checkable
import pandas as pd


# ─────────────────────────────────────────────────────────────────────────────
# core/contracts.py — Protocols (The Contracts)
# ─────────────────────────────────────────────────────────────────────────────

@runtime_checkable
class DataSink(Protocol):
    """Outbound abstraction — generated from PlantUML interface DataSink."""

    def write(self, results: dict) -> None: ...


@runtime_checkable
class PipelineService(Protocol):
    """Inbound abstraction — generated from PlantUML interface PipelineService."""

    def execute(self, raw_data: Any) -> None: ...


# ─────────────────────────────────────────────────────────────────────────────
# core/engine.py — TransformationEngine
# ─────────────────────────────────────────────────────────────────────────────

class TransformationEngine:
    """Core engine — generated from PlantUML class TransformationEngine."""

    # Attributes
    sink:   DataSink
    config: dict

    # Constructor
    def __init__(self, sink: DataSink, config: dict) -> None: ...

    # Public — satisfies PipelineService Protocol
    def execute(self, raw_data: Any) -> None: ...

    # Private — cleaning
    def _clean(self, df: pd.DataFrame) -> pd.DataFrame: ...

    # Private — all 8 analyses
    def _top_10(
        self, df: pd.DataFrame, continent: str, year: int
    ) -> pd.DataFrame: ...

    def _bottom_10(
        self, df: pd.DataFrame, continent: str, year: int
    ) -> pd.DataFrame: ...

    def _growth_rate(
        self, df: pd.DataFrame, continent: str,
        start_year: int, end_year: int
    ) -> pd.DataFrame: ...

    def _avg_by_continent(
        self, df: pd.DataFrame, start_year: int, end_year: int
    ) -> pd.DataFrame: ...

    def _global_gdp_trend(
        self, df: pd.DataFrame, start_year: int, end_year: int
    ) -> pd.DataFrame: ...

    def _fastest_growing_continent(
        self, df: pd.DataFrame, start_year: int, end_year: int
    ) -> pd.DataFrame: ...

    def _consistent_decline(
        self, df: pd.DataFrame, decline_years: int
    ) -> pd.DataFrame: ...

    def _continent_contribution(
        self, df: pd.DataFrame, start_year: int, end_year: int
    ) -> pd.DataFrame: ...


# ─────────────────────────────────────────────────────────────────────────────
# plugins/inputs.py — CSVReader
# ─────────────────────────────────────────────────────────────────────────────

class CSVReader:
    """Input plugin — generated from PlantUML class CSVReader."""

    filepath: str
    service:  PipelineService

    def __init__(self, filepath: str, service: PipelineService) -> None: ...
    def run(self) -> None: ...


# ─────────────────────────────────────────────────────────────────────────────
# plugins/inputs.py — JSONReader
# ─────────────────────────────────────────────────────────────────────────────

class JSONReader:
    """Input plugin — generated from PlantUML class JSONReader."""

    filepath: str
    service:  PipelineService

    def __init__(self, filepath: str, service: PipelineService) -> None: ...
    def run(self) -> None: ...


# ─────────────────────────────────────────────────────────────────────────────
# plugins/outputs.py — ConsoleWriter
# ─────────────────────────────────────────────────────────────────────────────

class ConsoleWriter:
    """Output plugin — generated from PlantUML class ConsoleWriter."""

    def write(self, results: dict) -> None: ...

    def _print_top_10(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_bottom_10(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_growth_rate(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_avg_continent(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_global_trend(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_fastest(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_decline(self, df: pd.DataFrame, cfg: dict) -> None: ...
    def _print_contribution(self, df: pd.DataFrame, cfg: dict) -> None: ...


# ─────────────────────────────────────────────────────────────────────────────
# plugins/outputs.py — GraphicsChartWriter
# ─────────────────────────────────────────────────────────────────────────────

class GraphicsChartWriter:
    """Output plugin — generated from PlantUML class GraphicsChartWriter."""

    output_dir: str

    def __init__(self, output_dir: str = "output") -> None: ...
    def write(self, results: dict) -> None: ...

    def _chart_top_10(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_bottom_10(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_growth_rate(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_avg_continent(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_global_trend(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_fastest(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_decline(self, df: pd.DataFrame, cfg: dict): ...
    def _chart_contribution(self, df: pd.DataFrame, cfg: dict): ...


# ─────────────────────────────────────────────────────────────────────────────
# main.py — Orchestrator
# ─────────────────────────────────────────────────────────────────────────────

class Orchestrator:
    """Bootstrap / Orchestrator — generated from PlantUML class Orchestrator."""

    INPUT_DRIVERS:  dict = {
        "csv":  CSVReader,
        "json": JSONReader,
    }
    OUTPUT_DRIVERS: dict = {
        "console":  ConsoleWriter,
        "graphics": GraphicsChartWriter,
    }

    def bootstrap(self, config_path: str = "config.json") -> None: ...
